Working on fixing enrollment

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -34,6 +34,14 @@
   </div>
 
   <div>
+    <label for="the_course_id">
+      Term offered
+    </label>
+
+    <input type="text" id="the_course_id" name="query_course_id" value="<%= @course.id %>">
+  </div>
+
+  <div>
     <label for="department_id_box">
       Department
     </label>
